# Pawel-Jurkiewicz-projects

Ball_Game/: CMakeLists.txt
C-PROJECTS/: README.md
CatchEnemies/: CMakeLists.txt  main.cpp
GameSFML/: CMakeLists.txt  README.MD  main.cpp
JAVA-PROJECTS/: README.md
JAVA-PROJECTS/Calculator/: pom.xml
JAVA-PROJECTS/Calculator/src/main/java/com/mycompany/converter/: JakartaRestConfiguration.java
JAVA-PROJECTS/Calculator/src/main/java/com/mycompany/converter/resources/: JakartaEE10Resource.java
JAVA-PROJECTS/Calculator/src/main/java/pl/polsl/pawel/jurkiewicz/GUI/: ErrorWindow.form  ErrorWindow.java  HistoryWindow.form  NewJFrame.form  NewJFrame.java
JAVA-PROJECTS/Calculator/src/main/java/pl/polsl/pawel/jurkiewicz/controller/: Input.java
JAVA-PROJECTS/Calculator/src/main/java/pl/polsl/pawel/jurkiewicz/main/: package-info.java
JAVA-PROJECTS/Calculator/src/main/java/pl/polsl/pawel/jurkiewicz/model/: ConversionHistory.java  ConversionParameters.java  Convert.java  ConvertSystem.java  InvalidInputException.java
JAVA-PROJECTS/Calculator/src/main/java/servlets/: ConvertServlet.java  HistoryServlet.java
JAVA-PROJECTS/Converter/: nbactions.xml  pom.xml
JAVA-PROJECTS/Converter/src/main/java/pl/polsl/pawel/jurkiewicz/main/: Core.java
JAVA-PROJECTS/PasswordGenerator/: pom.xml
JAVA-PROJECTS/PasswordGenerator/src/main/java/com/mycompany/passwordgenerator/: PasswordGenerator.java
KOTLIN-PROJECTS/: README.md
PYTHON-PROJECTS/: README.md
SFML-PROJECTS/: README.md
SFML-PROJECTS/Ball_Game/: main.cpp
SWIFT-PROJECTS/: README.md
UNITY-PROJECTS/: README.md
(+14 files in other folders)
